2007-01-20 Sergii Stoian <stoyan255@gmail.com>

	* Modules/Editors/ProjectCenter/Resources/ObjC.syntax: Update.

2007-01-15 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectManager.m: Remove code handling rootBuildPath var.
	Remove rootBuildPath var.
	* Headers/ProjectCenter/PCProjectManager.h: Ditto.
	* Framework/PCFileManager.m: Add removeDirsIfEmpty:(BOOL) parameter to
	remove* methods.
	* Headers/ProjectCenter/PCFileManager.h: Ditto.
	* Framework/PCProject.m: Pass removeDirsIfEmpty:(BOOL) parameter to 
	PCFileManager remove* methods calls.
	* PCAppController.m: Ditto.
	* Modules/Projects/Application/PCAppProject.m: Ditto.
	* Modules/Projects/Tool/PCToolProject.m: Ditto.
	* Framework/PCProjectBuilder.m: Rename ivar currentProject into project.
	Use it.
	(prebuildCheck:): Create root build directory if not exist.
	* Headers/ProjectCenter/PCProjectBuilder.h: Rename ivar currentProject 
	into project.
	* Documentation/TODO: Update.
	* Documentation/ANNOUNCE: Ditto.
	
2007-01-15 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectManager.m: Fix problem with closing project.
	* Framework/PCProjectr.m: Ditto.
	* Framework/PCMakefileFactory.m: Support for root build directory added.
	* Framework/PCProjectBuilder.m: Code cleanup.
	* Framework/PCProjectEditor.m: Enable usage of parser. Start testing process.
	* Framework/PCProjectWindows.m: Enable tooltips for buttons.
	* Framework/PCPrefController.m: setRootBuildDir: fix.

	* PCAppController.m: applicationWillTerminate: Remove file from build dir on
	application quit. This code still needs review (also removed build dir because of
	use PCFileManager's method).

	* Modules/Editors/ProjectCenter/PCEditor.m: browserItemsForItem: Crashes if file
	is not supported by parser. Fixed.
	
2007-01-12 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectBuilder.m: Parsing of error output almost complete,
	testing. Display number of warnings and errors in statud line after build
	process finished.